--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </div>
                             <div class="col-xl-6 col-lg-7">
                                 <div class="main-menu  d-none d-lg-block">
-                                    <!-- <nav>
+                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="Works.html">Works</a></li>
@@ -70,7 +70,7 @@
                                             </li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
-                                    </nav> -->
+                                    </nav>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
